# coordination_controllers

./: .clang-format  .gitignore  README.md
axially_symmetric_controllers/: CMakeLists.txt  axially_symmetric_controller_plugins.xml  package.xml
axially_symmetric_controllers/cfg/: AxiallySymmetricController.cfg
axially_symmetric_controllers/include/axially_symmetric_controllers/: nullspace_controller.h  setpoint.h  twist_decomposition_controller.h  utility.h
axially_symmetric_controllers/src/: nullspace_controller.cpp  twist_decomposition_controller.cpp  utility.cpp
coordinated_control_msgs/: CMakeLists.txt  package.xml
coordinated_control_msgs/msg/: AxiallySymmetricPose.msg  AxiallySymmetricSetpoint.msg  Diagnostics.msg  PositionerSetpoint.msg  RobotSetpoint.msg  TwistDecompositionSetpoint.msg
coordinated_motion_controllers/: CMakeLists.txt  coordinated_controller_plugins.xml  package.xml  positioner_objective_plugins.xml
coordinated_motion_controllers/cfg/: CoordinatedController.cfg  TaskspaceAnchor.cfg
coordinated_motion_controllers/include/coordinated_motion_controllers/: axially_symmetric_controller.h  coordinated_controller_base.h  coordinated_nullspace_controller.h  coordinated_robot_controller.h  coordinated_twist_decomposition_controller.h  kinematics.h  pose_controller.h  positioner_controller.h  robot_controller.h  setpoint.h  twist_decomposition_controller.h  utility.h
coordinated_motion_controllers/include/coordinated_motion_controllers/positioner_objectives/: match_configuration.h  minimize_velocity.h  positioner_objective_plugin.h  taskspace_anchor.h
coordinated_motion_controllers/src/: axially_symmetric_controller.cpp  coordinated_controller_base.cpp  coordinated_nullspace_controller.cpp  coordinated_robot_controller.cpp  coordinated_twist_decomposition_controller.cpp  pose_controller.cpp  positioner_controller.cpp  robot_controller.cpp  test.cpp  twist_decomposition_controller.cpp  utility.cpp
coordinated_motion_controllers/src/positioner_objectives/: match_configuration.cpp  minimize_velocity.cpp  positioner_objective_plugin.cpp  taskspace_anchor.cpp
coordinated_motion_examples/: CMakeLists.txt  package.xml  setup.py
coordinated_motion_examples/config/: controller_clients.yaml  coordinated_motion_examples.rviz  example_controllers.yaml  positioner_hardware.yaml  robot6R_controllers.yaml  robot6R_hardware.yaml  robot7R_controllers.yaml  robot7R_hardware.yaml  robot_hardware.yaml
coordinated_motion_examples/launch/: baseframe_control_demo.launch  coordinated_motion_demo.launch  nullspace_control_demo.launch  twist_decomposition_demo.launch  two_robot_bringup.launch
coordinated_motion_examples/scripts/: baseframe_control_demo.py  coordinated_motion_demo.py  coordinated_motion_demo_rob1.py  coordinated_motion_demo_rob2.py  nullspace_control_demo_rob1.py  nullspace_control_demo_rob2.py  twist_decomposition_demo.py  twist_decomposition_demo_rob1.py  twist_decomposition_demo_rob2.py
coordinated_motion_examples/src/coordinated_motion_examples/: __init__.py  control_demo.py  controller_client.py  controller_manager_client.py  coordinated_motion_client.py  path.py  path_visualization.py  time_scaling.py  trajectory.py
coordinated_motion_examples/urdf/: positioner1R_macro.xacro  robot6R_macro.xacro  two_robot6R.xacro  two_robot7R.xacro
coordination_controllers/: CMakeLists.txt  package.xml
