<?xml version="1.0"?>
<package format="2">
  <name>axially_symmetric_controllers</name>
  <version>0.0.1</version>
  <description>The coordinated_motion_controllers package</description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>sensor_msgs</depend>
  <depend>coordinated_control_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>realtime_tools</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pluginlib</depend>

  <export>
    <controller_interface plugin="${prefix}/axially_symmetric_controller_plugins.xml"/>
  </export>
</package>
