<?xml version="1.0"?>
<package format="2">
  <name>coordinated_control_msgs</name>
  <version>0.1.0</version>
  <description> coordinated_control_msgs provides message and action definitions
  for coordinated controllers </description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
