<?xml version="1.0"?>
<package format="2">
  <name>coordinated_motion_controllers</name>
  <version>0.0.3</version>
  <description>The coordinated_motion_controllers package</description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>sensor_msgs</depend>
  <depend>coordinated_control_msgs</depend>
  <depend>taskspace_control_msgs</depend>
  <depend>taskspace_controllers</depend>
  <depend>task_priority_controllers</depend>
  <depend>axially_symmetric_controllers</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>realtime_tools</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pluginlib</depend>

  <export>
    <controller_interface plugin="${prefix}/coordinated_controller_plugins.xml"/>
    <coordinated_motion_controllers plugin="${prefix}/positioner_objective_plugins.xml"/>
  </export>
</package>
