<?xml version="1.0"?>
<package format="2">
  <name>coordinated_motion_examples</name>
  <version>0.0.2</version>
  <description>The coordinated_motion_examples package</description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_control_boilerplate</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>axially_symmetric_controllers</exec_depend>
  <exec_depend>coordinated_motion_controllers</exec_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

</package>
