<?xml version="1.0"?>
<package format="2">
  <name>coordination_controllers</name>
  <version>0.0.1</version>
  <description>Coordinated control and redundancy resolution for multi-robot systems</description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <exec_depend>coordinated_control_msgs</exec_depend> -->

  <export>
    <metapackage/>
  </export>
</package>
